--- a/src/app/components/drag-drop-list/drag-drop-list.component.html
+++ b/src/app/components/drag-drop-list/drag-drop-list.component.html
@@ -1,35 +1,29 @@
 <div class="tracker-container">
-    <div class='tracker-container-header bg-color-orange'>
-        <p class="text-color-white">Trackers</p>
-    </div>
-  
-    <div
-      cdkDropList
-      #todoList="cdkDropList"
-      [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[doneList]"
-      class="tracker-list"
-      (cdkDropListDropped)="didDrop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item.name}}</div>
-    </div>
+  <div class='tracker-container-header bg-color-orange'>
+    <p class="text-color-white">Trackers</p>
   </div>
-  
-  <div class="possible-tracker-container">
-    <div class='tracker-container-header bg-color-gray'>
-        <p class="text-color-black">Posibles trackers<img class="possible-info"  (click)="onPossibleInfoClicked()" src="../../../assets/images/info.png"/></p>
+
+  <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"
+    class="tracker-list" (cdkDropListDropped)="didDrop($event)">
+    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item.name}}</div>
+  </div>
+</div>
+
+<div class="possible-tracker-container">
+  <div class='tracker-container-header bg-color-gray'>
+    <p class="text-color-black">Posibles trackers<img (click)="onPossibleInfoClicked()"
+        src="../../../assets/images/info.png" /></p>
+    <div class="possible-info" [ngClass]="{'isPossibleClicked': isPossibleInfoClicked}">
+      Estos bloques se categorizaron como <span class="no-trackers">NO trackers</span>. Si consideras que alguno lo es, arrástralo a la columna 'Trackers'
     </div>
-    <div class="possible-info" >
+    <!-- <div class="possible-info" [class.isPossibleClicked]="isPossibleInfoClicked">
       
-    </div>
-    <div
-      cdkDropList
-      #doneList="cdkDropList"
-      [cdkDropListData]="done"
-      [cdkDropListConnectedTo]="[todoList]"
-      class="possible-tracker-list"
-      (cdkDropListDropped)="didDrop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item.name}}</div>
-    </div>
+      Estos bloques se categorizaron como NO trackers. Si consideras que alguno lo es, arrástralo a la columna 'Trackers'
+    </div> -->
   </div>
-  
-  
+
+  <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
+    class="possible-tracker-list" (cdkDropListDropped)="didDrop($event)">
+    <div class="example-box" *ngFor="let item of done" cdkDrag>{{item.name}}</div>
+  </div>
+</div>
