--- a/src/app/components/drag-drop-list/drag-drop-list.component.scss
+++ b/src/app/components/drag-drop-list/drag-drop-list.component.scss
@@ -1,101 +1,138 @@
 .tracker-container {
-    width: 370px;
-    height: 350px;
-    border: 1px solid #CBD2D9;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  }
-  .possible-tracker-container {
-    width: 370px;
-    height: 242px;
-    max-height: 242px;
-    border-radius: 10px;
-    border: 1px solid #CBD2D9;
-  }
-  .possible-info {
-    color: #CBD2D9;
-  }
-  .possible-info.active {
-    position: absolute;
-    height: 60px;
-    width: 370px;
-    background-color: #CBD2D9;
-  }
-  .tracker-list {
-    border: solid 1px #CBD2D9;
-    min-height: 60px;
-    height: 300px;
-    background: white;
-    border-radius: 4px;
-    overflow-y: auto;
-    display: block;
-  }
-  .possible-tracker-list {
-    border: solid 1px #CBD2D9;
-    min-height: 60px;
-    background: white;
-    height: 192px;
-    border-radius: 4px;
-    overflow-y: auto;
-    display: block;
-  }
-  
-  .example-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #CBD2D9;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: pointer;
-    background: white;
-    font-size: 14px;
-  }
-  .tracker-container-header {
-    height: 50px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+  width: 370px;
+  height: 350px;
+  border: 1px solid #CBD2D9;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.possible-tracker-container {
+  width: 370px;
+  height: 242px;
+  max-height: 242px;
+  border-radius: 10px;
+  border: 1px solid #CBD2D9;
+}
+
+.possible-info {
+  position: relative;
+  display: none;
+  height: 64px;
+  width: 370px;
+  z-index: 999999999;
+  background-color: #FCF3CF;
+  border-radius: 0px 0px 8px 8px;
+  border: 1px solid #FCF3CF;
+  color: #0A2240;
+  text-align: center;
+  font-feature-settings: 'clig' off, 'liga' off;
+  /* Body Ligth */
+  font-family: Calibri;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 22px;
+
+  .no-tarcker {
+    color: #0A2240;
+    font-feature-settings: 'clig' off, 'liga' off;
+    /* Body */
+    font-family: Calibri;
     font-size: 16px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-    line-height: 50px;
-    color: white;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
   }
-  .text-color-white {
-    color: white;
-  }
-  .text-color-black {
-    color: black;
-  }
-  .bg-color-orange {
-    background-color: orange;
-  }
-  .bg-color-gray {
-    background-color: #F6F8FA;
-  }
-  .cdk-drag-preview {
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
-  
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .example-box:last-child {
-    border: none;
-  }
-  
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
+
+  /* 157.143% */
+}
+
+.possible-info.isPossibleClicked {
+  display: block;
+
+}
+
+.tracker-list {
+  border: solid 1px #CBD2D9;
+  min-height: 60px;
+  height: 300px;
+  background: white;
+  border-radius: 4px;
+  overflow-y: auto;
+  display: block;
+}
+
+.possible-tracker-list {
+  border: solid 1px #CBD2D9;
+  min-height: 60px;
+  background: white;
+  height: 192px;
+  border-radius: 4px;
+  overflow-y: auto;
+  display: block;
+}
+
+.example-box {
+  padding: 20px 10px;
+  border-bottom: solid 1px #CBD2D9;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: pointer;
+  background: white;
+  font-size: 14px;
+}
+
+.tracker-container-header {
+  height: 50px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-size: 16px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+  line-height: 50px;
+  color: white;
+}
+
+.text-color-white {
+  color: white;
+}
+
+.text-color-black {
+  color: black;
+}
+
+.bg-color-orange {
+  background-color: orange;
+}
+
+.bg-color-gray {
+  background-color: #F6F8FA;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
