--- a/src/app/components/tracker-draw/tracker-draw.component.html
+++ b/src/app/components/tracker-draw/tracker-draw.component.html
@@ -1,10 +1,24 @@
-<div class="tracker-draw">
+<!-- <div class="tracker-draw">
     <canvas #canvas width="875" height="566" class="tracker-draw-canvas"></canvas>
     <div class="zoom-group">
         <div (click)="zoomIn()" class="zoom-button zoom-in">+</div>
         <div (click)="zoomOut()" class="zoom-button zoom-out">-</div>
     </div>
     <div class="tracker-draw-canvas-footer">
+        <strong>{{tc1}}</strong> trackers encontrados| <strong>{{tc2}}</strong> trackers bifila| <strong>{{tc3}}</strong> posibles trackers
+    </div>
+</div> -->
+
+<div class="tracker-draw" width="width" height="height">
+    <div *ngIf="title !== ''" class="tracker-draw-canvas-header">
+        {{title}}
+    </div>
+    <canvas #canvas width={{width}} height={{height}} class="tracker-draw-canvas"></canvas>
+    <div *ngIf="title == ''" class="zoom-group">
+        <div (click)="zoomIn()" class="zoom-button zoom-in">+</div>
+        <div (click)="zoomOut()" class="zoom-button zoom-out">-</div>
+    </div>
+    <div *ngIf="title == ''" class="tracker-draw-canvas-footer">
         <strong>{{tc1}}</strong> trackers encontrados| <strong>{{tc2}}</strong> trackers bifila| <strong>{{tc3}}</strong> posibles trackers
     </div>
 </div>
